crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__annotated_data.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\npub type Foo {\n    foo: Int\n}\n\nvalidator {\n    fn annotated_data(datum: Data<Foo>, redeemer: Data, ctx: Void) {\n        True\n    }\n}\n"
---
{
  "title": "test_module.annotated_data",
  "datum": {
    "title": "datum",
    "schema": {
      "$ref": "#/definitions/test_module~1Foo"
    }
  },
  "redeemer": {
    "title": "redeemer",
    "schema": {
      "$ref": "#/definitions/Data"
    }
  },
  "compiledCode": "<redacted>",
  "hash": "<redacted>",
  "definitions": {
    "Data": {
      "title": "Data",
      "description": "Any Plutus data."
    },
    "Int": {
      "dataType": "integer"
    },
    "test_module/Foo": {
      "title": "Foo",
      "anyOf": [
        {
          "title": "Foo",
          "dataType": "constructor",
          "index": 0,
          "fields": [
            {
              "title": "foo",
              "$ref": "#/definitions/Int"
            }
          ]
        }
      ]
    }
  }
}
