crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__list_2_tuples_as_map.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\ntype Dict<key, value> {\n    inner: List<(ByteArray, value)>\n}\n\ntype UUID { UUID }\n\nvalidator {\n  fn list_2_tuples_as_map(redeemer: Dict<UUID, Int>, ctx: Void) {\n    True\n  }\n}\n"
---
{
  "title": "test_module.list_2_tuples_as_map",
  "redeemer": {
    "title": "redeemer",
    "schema": {
      "$ref": "#/definitions/test_module~1Dict$test_module~1UUID_Int"
    }
  },
  "compiledCode": "58bc01000032323232323232223253330044a22930a99802a4811856616c696461746f722072657475726e65642066616c73650013656323253330053370e9000000899192999805980680109924c646600200200444a66601a00229309919801801980800119191bad300e002375c6018002601c0022a660100082c6eacc02c004c020dd50020a998030010b18031baa00349011972656465656d65723a20446963743c555549442c20496e743e005734ae7155ceaab9e5573eae855d11",
  "hash": "764465e16d4d85649f7e6bd982bb3620ca0ff51a54d442bc6c54147a",
  "definitions": {
    "ByteArray": {
      "dataType": "bytes"
    },
    "Int": {
      "dataType": "integer"
    },
    "List$Tuple$ByteArray_Int": {
      "dataType": "map",
      "keys": {
        "$ref": "#/definitions/ByteArray"
      },
      "values": {
        "$ref": "#/definitions/Int"
      }
    },
    "test_module/Dict$test_module/UUID_Int": {
      "title": "Dict",
      "anyOf": [
        {
          "title": "Dict",
          "dataType": "constructor",
          "index": 0,
          "fields": [
            {
              "title": "inner",
              "$ref": "#/definitions/List$Tuple$ByteArray_Int"
            }
          ]
        }
      ]
    }
  }
}
