crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__list_pairs_as_map.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\npub type Dict<key, value> {\n    inner: List<Pair<ByteArray, value>>\n}\n\npub type UUID { UUID }\n\nvalidator list_pairs_as_map {\n  spend(datum: Option<Data>, redeemer: Dict<UUID, Int>, _output_reference: Data, transaction: Data) {\n    True\n  }\n}\n"
---
{
  "title": "test_module.list_pairs_as_map.spend",
  "datum": {
    "title": "datum",
    "schema": {
      "$ref": "#/definitions/Data"
    }
  },
  "redeemer": {
    "title": "redeemer",
    "schema": {
      "$ref": "#/definitions/test_module~1Dict<test_module~1UUID,Int>"
    }
  },
  "compiledCode": "<redacted>",
  "hash": "<redacted>",
  "definitions": {
    "ByteArray": {
      "dataType": "bytes"
    },
    "Data": {
      "title": "Data",
      "description": "Any Plutus data."
    },
    "Int": {
      "dataType": "integer"
    },
    "List<Pair<ByteArray,Int>>": {
      "dataType": "map",
      "keys": {
        "$ref": "#/definitions/ByteArray"
      },
      "values": {
        "$ref": "#/definitions/Int"
      }
    },
    "test_module/Dict<test_module/UUID,Int>": {
      "title": "Dict",
      "anyOf": [
        {
          "title": "Dict",
          "dataType": "constructor",
          "index": 0,
          "fields": [
            {
              "title": "inner",
              "$ref": "#/definitions/List<Pair<ByteArray,Int>>"
            }
          ]
        }
      ]
    }
  }
}
