crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__map_in_map.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\npub type OuterMap =\n    List<Pair<Int, InnerMap>>\n\npub type InnerMap =\n    List<Pair<Int, Bool>>\n\nvalidator placeholder {\n  spend(_datum: Option<Void>, _redeemer: OuterMap, _utxo: Data, _self: Data,) {\n    True\n  }\n}\n"
---
{
  "title": "test_module.placeholder.spend",
  "datum": {
    "title": "_datum",
    "schema": {
      "$ref": "#/definitions/Void"
    }
  },
  "redeemer": {
    "title": "_redeemer",
    "schema": {
      "$ref": "#/definitions/OuterMap"
    }
  },
  "compiledCode": "<redacted>",
  "hash": "<redacted>",
  "definitions": {
    "Bool": {
      "title": "Bool",
      "anyOf": [
        {
          "title": "False",
          "dataType": "constructor",
          "index": 0,
          "fields": []
        },
        {
          "title": "True",
          "dataType": "constructor",
          "index": 1,
          "fields": []
        }
      ]
    },
    "InnerMap": {
      "title": "InnerMap",
      "dataType": "map",
      "keys": {
        "$ref": "#/definitions/Int"
      },
      "values": {
        "$ref": "#/definitions/Bool"
      }
    },
    "Int": {
      "dataType": "integer"
    },
    "OuterMap": {
      "title": "OuterMap",
      "dataType": "map",
      "keys": {
        "$ref": "#/definitions/Int"
      },
      "values": {
        "$ref": "#/definitions/InnerMap"
      }
    },
    "Void": {
      "title": "Unit",
      "anyOf": [
        {
          "dataType": "constructor",
          "index": 0,
          "fields": []
        }
      ]
    }
  }
}
