crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__nested_data.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\npub type Foo {\n    foo: Data\n}\n\nvalidator {\n  fn nested_data(datum: Foo, redeemer: Int, ctx: Void) {\n    True\n  }\n}\n"
---
{
  "title": "test_module.nested_data",
  "datum": {
    "title": "datum",
    "schema": {
      "$ref": "#/definitions/test_module~1Foo"
    }
  },
  "redeemer": {
    "title": "redeemer",
    "schema": {
      "$ref": "#/definitions/Int"
    }
  },
  "compiledCode": "58e501000032323232323232323232232232253330084a22930a99804a491856616c696461746f722072657475726e65642066616c73650013656533333300d0011533007004161533007004161533007004161375a0022a6600e0082c64a66600a66e1d200030073754002264a6660140022a6600e00a2c264a666016601a0042930a998040030b180580098041baa001153300600416533333300b00110011533005003161533005003161533005003161533005003164910d72656465656d65723a20496e740049010a646174756d3a20466f6f005734ae7155ceaab9e5573eae855d12ba41",
  "hash": "b3eed8cc1cc766bd2fb1210c5b0bb042a17a7bbc824ed5149d3b3384",
  "definitions": {
    "Data": {
      "title": "Data",
      "description": "Any Plutus data."
    },
    "Int": {
      "dataType": "integer"
    },
    "test_module/Foo": {
      "title": "Foo",
      "anyOf": [
        {
          "title": "Foo",
          "dataType": "constructor",
          "index": 0,
          "fields": [
            {
              "title": "foo",
              "$ref": "#/definitions/Data"
            }
          ]
        }
      ]
    }
  }
}
