crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__recursive_types.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\npub type Expr {\n  Val(Int)\n  Sum(Expr, Expr)\n  Mul(Expr, Expr)\n}\n\nvalidator {\n  fn recursive_types(redeemer: Expr, ctx: Void) {\n    True\n  }\n}\n"
---
{
  "title": "test_module.recursive_types",
  "redeemer": {
    "title": "redeemer",
    "schema": {
      "$ref": "#/definitions/test_module~1Expr"
    }
  },
  "compiledCode": "5901060100003232323232323232223253330054a22930a9980324811856616c696461746f722072657475726e65642066616c73650013656323233001001004223253330083370e900000089919299980718080010a4c2a6601600c2c6eb4c038004c01c00854ccc020cdc3a4004002264646464a6660206024004264649319804004001198038038018a998068040b18080009808001180700098038010a99980419b87480100044c8c8c8c94ccc040c0480084c8c9263300800800233007007003153300d0081630100013010002300e00130070021533009004163009375400292010e72656465656d65723a204578707200230053754002ae695ce2ab9d5573caae7d5d0aba21",
  "hash": "2f1489f27f8ba5f0fb9530cf06162816e8bd250aaa50e4a8aa093f27",
  "definitions": {
    "Int": {
      "dataType": "integer"
    },
    "test_module/Expr": {
      "title": "Expr",
      "anyOf": [
        {
          "title": "Val",
          "dataType": "constructor",
          "index": 0,
          "fields": [
            {
              "$ref": "#/definitions/Int"
            }
          ]
        },
        {
          "title": "Sum",
          "dataType": "constructor",
          "index": 1,
          "fields": [
            {
              "$ref": "#/definitions/test_module~1Expr"
            },
            {
              "$ref": "#/definitions/test_module~1Expr"
            }
          ]
        },
        {
          "title": "Mul",
          "dataType": "constructor",
          "index": 2,
          "fields": [
            {
              "$ref": "#/definitions/test_module~1Expr"
            },
            {
              "$ref": "#/definitions/test_module~1Expr"
            }
          ]
        }
      ]
    }
  }
}
