crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__tuples.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\nvalidator tuples {\n  spend(datum: Option<(Int, ByteArray)>, redeemer: (Int, Int, Int), output_reference: Data, transaction: Data) {\n    True\n  }\n}\n"
---
{
  "title": "test_module.tuples.spend",
  "datum": {
    "title": "datum",
    "schema": {
      "$ref": "#/definitions/Tuple<<Int,ByteArray>>"
    }
  },
  "redeemer": {
    "title": "redeemer",
    "schema": {
      "$ref": "#/definitions/Tuple<<Int,Int,Int>>"
    }
  },
  "compiledCode": "<redacted>",
  "hash": "<redacted>",
  "definitions": {
    "ByteArray": {
      "dataType": "bytes"
    },
    "Int": {
      "dataType": "integer"
    },
    "Tuple<<Int,ByteArray>>": {
      "title": "Tuple",
      "dataType": "list",
      "items": [
        {
          "$ref": "#/definitions/Int"
        },
        {
          "$ref": "#/definitions/ByteArray"
        }
      ]
    },
    "Tuple<<Int,Int,Int>>": {
      "title": "Tuple",
      "dataType": "list",
      "items": [
        {
          "$ref": "#/definitions/Int"
        },
        {
          "$ref": "#/definitions/Int"
        },
        {
          "$ref": "#/definitions/Int"
        }
      ]
    }
  }
}
